test: 테스트가 통과하도록 수정